--- a/templates/viewplayers.html
+++ b/templates/viewplayers.html
@@ -5,7 +5,7 @@
         <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="product_taital">My athletes</h1>
+                <h1 class="product_taital">Our athletes</h1>
                 <p class="product_text">insert text?</p>
             </div>
         </div>
@@ -23,185 +23,6 @@
                                 <li><a href="#">Add request</a></li>
                             </ul>
                         </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-2.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-3.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-4.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-5.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-6.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-7.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-8.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-9.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-10.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-11.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="product_box">
-                    <h4 class="bursh_text">Beauty Bursh</h4>
-                    <p class="lorem_text">incididunt ut labore et dolore magna aliqua. Ut enim </p>
-                    <img src="images/img-12.png" class="image_1">
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li class="active"><a href="#">Buy Now</a></li>
-                                <li><a href="#">Buy Now</a></li>
-                            </ul>
-                        </div>
-                        <h3 class="price_text">Price $30</h3>
                     </div>
                     </div>
                 </div>
