--- a/templates/requests.html
+++ b/templates/requests.html
@@ -16,10 +16,10 @@
   <svg width="1500" height="180" style="position:relative;top:10%;left:-95px">
     <g>
       <rect x="50" y="20" rx="20" ry="20" width="1000" height="100" style="fill:white;stroke:black;stroke-width:5;opacity:0.5"/>
-      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="18px">Name</text>
-      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="18px">Coach</text>
-      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="18px">Amount Needed</text>
-      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="18px">Reason For Aid</text>
+      <text x="8%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px" textLength="145" lengthAdjust="spacing">&nbsp; Rishith Rao Ailneni</text>
+      <text x="17%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px">Coach</text>
+      <text x="28%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px">Amount Needed</text>
+      <text x="41%" y="39%"  fill="black" dominant-baseline="middle" text-anchor="middle" font-size="16px">Reason For Aid</text>
       
       <foreignObject x="55%" y="-5%" width="200" height="150">
         <body>
