--- a/templates/ca_requests.html
+++ b/templates/ca_requests.html
@@ -91,9 +91,9 @@
 </svg>
   
             <div class="seemore_bt"><a href="#" style="color:white">See More</a></div>
+            <div class="seemore_bt"><a href="createrequest" style="color:white">Create Request</a></div>
         </div>
-        </div>
-    </div>
+       
     <!-- Javascript files-->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
