--- a/templates/sponsorprofile.html
+++ b/templates/sponsorprofile.html
@@ -51,7 +51,14 @@ function clearText(field){
 .x{
     line-height: 0;
   }
-
+  .product_box {
+    width: 70%;
+    background-color: #ffffff;
+    height: auto;
+    border: 1px solid #7d7d7c;
+    padding: 20px 0px 0px 0px;
+    margin-top: 30px;
+}
 
 </style>
 
@@ -134,7 +141,7 @@ function clearText(field){
                    </div>
                </div>
           
-              <div class="row">
+              
                 <div class="col-lg-3 col-sm-6">
                     <div class="product_box">
                     <h4 class="bursh_text">Player name</h4>
@@ -151,7 +158,7 @@ function clearText(field){
                     </div>
                 </div>
           
-              <div class="row">
+              
                   <div class="col-lg-3 col-sm-6">
                       <div class="product_box">
                       <h4 class="bursh_text">Player name</h4>
@@ -167,6 +174,23 @@ function clearText(field){
                       </div>
                       </div>
                   </div>
+
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="product_box">
+                    <h4 class="bursh_text">Player name</h4>
+                    <p class="lorem_text">Sport</p>
+                    <img src="images/img-1.png" class="image_1">
+                    <div class="btn_main">
+                        <div class="buy_bt">
+                            <ul>
+                              <li><a href="#">View Profile</a></li>
+                           
+                            </ul>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                
               </div>
 
               
